unpackaged/main/default/objects/n2de__Distribution_reject_log__c/n2de__Distribution_reject_log__c.object-meta.xml
<CustomObject>
    <label>Distribution reject log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution reject logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>