unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Approved__c.field-meta.xml
<CustomField>
    <fullName>n2de__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Approve the rejection of this assignment</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>