unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Assigned_object_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_object_id__c</fullName>
    <externalId>true</externalId>
    <label>Assigned object id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>