unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Reason__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>