unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Review_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Review_datetime__c</fullName>
    <label>Review datetime</label>
    <type>DateTime</type>
</CustomField>