unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Reviewed_by__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reviewed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_reject_logs</relationshipName>
    <type>Lookup</type>
</CustomField>