unpackaged/main/default/objects/n2de__Distribution_reject_log__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipLabel>Distribution reject logs</relationshipLabel>
    <relationshipName>Distribution_reject_logs</relationshipName>
    <type>Lookup</type>
</CustomField>